--- a/app.json
+++ b/app.json
@@ -8,7 +8,8 @@
     "pages/search/search",
     "pages/seniority/seniority",
     "pages/seniority-detail/seniority-detail",
-    "pages/singer-detail/singer-detail"
+    "pages/singer-detail/singer-detail",
+    "pages/bluetooth"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -35,6 +36,10 @@
         "pagePath": "pages/search/search",
         "text": "搜索"
       }
+//      {
+//        "pagePath": "pages/bluetooth",
+//        "text": "蓝牙"
+//      }
     ]
   }
 }
